recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:15: error: expected start of definition
	override def run() {
                 ^Sierpinski:19: error: Unmatched closing brace '}' ignored here
}
^