recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  
  if(level == 0){
    
    for(i <- 0 to 2)
    	
    	avance(length);
    
  	}
    
  }
  
}